--- a/OSKI_Test/OSKI_Test.csproj
+++ b/OSKI_Test/OSKI_Test.csproj
@@ -11,6 +11,8 @@
     <SpaProxyServerUrl>https://localhost:44498</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>C:\Users\Maksi\Desktop\OSKI_Test\OSKI_Test\bin\Debug\net6.0\QuizWebAPI.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
